Bug 288629 - Terminal KPart Inaccessible when not docked and panels are locked.
Summary: Terminal KPart Inaccessible when not docked and panels are locked.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 06:30 UTC by Tianyu Zhu
Modified: 2013-07-29 21:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tianyu Zhu 2011-12-10 06:30:52 UTC
Version:           1.7 (using KDE 4.7.3) 
OS:                Linux

As in the summary, the terminal kpart in dolphin is inaccessible when dolphin is not docked and panels are locked.

Reproducible: Always

Steps to Reproduce:
Press F4 to show the Terminal panel while panels are unlocked.
Drag the Terminal panel out of the main dolphin window.
Lock the panels.
Hide the Terminal part and then show it.

Actual Results:  
The terminal is not inaccessible and if the dolphin window loses focus, the terminal kpart does not disappear.

Expected Results:  
The terminal should be accessible and if the dolphin window loses focus, the terminal should disappear.
On previous versions, the terminal also had a translucent background, (which I had enabled in Konsole). In this version, the background is opaque.

OS: Linux (i686) release 3.0.0-14-generic
Compiler: gcc
Comment 1 Frank Reininghaus 2011-12-12 22:31:29 UTC
Thanks for the bug report! I can reproduce the problem in master.
Comment 2 Tianyu Zhu 2012-03-06 00:48:31 UTC
This bug has not yet been fixed as of Dolphin 2.0
Comment 3 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:53 UTC
Resetting assignee to default as per bug #305719
Comment 4 Frank Reininghaus 2013-07-29 21:25:40 UTC
Git commit 5583fc635b1bfc96c096bce6c4fa2c28df4d279f by Frank Reininghaus.
Committed on 29/07/2013 at 21:22.
Pushed by freininghaus into branch 'master'.

Do not allow that panels are dragged out of the main window

This feature might have been useful in some cases, but it's most likely
not useful enough to justify that we accept the bugs that it causes.
Even though some of these bugs are not Dolphin's fault at all, they
cause serious problems for users in some cases.

I'm pushing this commit to master only because I prefer to not push such
behavior changes to 4.11 at this point of the release cycle.
Related: bug 322299, bug 322812
FIXED-IN: 4.12.0
REVIEW: 111692

M  +11   -3    dolphin/src/dolphindockwidget.cpp

http://commits.kde.org/kde-baseapps/5583fc635b1bfc96c096bce6c4fa2c28df4d279f